service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flightbooking-service
spec:
  selector:
    app: flightbooking
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5003
  type: ClusterIP
